# offlinemsmtp

./: .build.yml  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Pipfile  README.md  README.rst  create-pypirc.sh  dev-requirements.txt  flake.nix  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.nix
.builds/: build.yml  readme.yml
.github/workflows/: build.yaml
.vim/: coc-settings.json
cicd/: custom_style_check.py  is_tagged_with_version  publish-gitlab-release.sh
offlinemsmtp/: __init__.py  __main__.py  daemon.py  util.py
systemd/: offlinemsmtp.service
