[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "offlinemsmtp"
authors = [
    { name = "Sumner Evans", email = "inquiries@sumnerevans.com" },
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8,<4"
license = { file = "LICENSE" }
keywords = ["email", "msmtp", "offline"]
classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Topic :: Communications :: Email :: Mail Transport Agents",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

dependencies = [
    "inotify",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-pep3101",
    "flake8-print",
    "flit",
    "isort",
    "mypy",
    "pip-tools",
    "pre-commit",
    "requirements-parser",
    "termcolor",
]

[project.urls]
Homepage = "https://github.com/sumnerevans/offlinemsmtp"
"Bug Tracker" = "https://github.com/sumnerevans/offlinemsmtp/issues"

[project.scripts]
offlinemsmtp = "offlinemsmtp.__main__:main"

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "offlinemsmtp"
line_length = 99

[tool.black]
line-length = 99
target-version = ["py38"]
