[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit_core<4,>=3.2",
]

[project]
name = "offlinemsmtp"
readme = "README.md"
keywords = [
  "email",
  "msmtp",
  "offline",
]
license = { file = "LICENSE" }
authors = [
    { name = "Sumner Evans", email = "inquiries@sumnerevans.com" },
]
requires-python = ">=3.8,<4"
classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha", # Indicate who your project is intended for
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: POSIX",
  "Topic :: Communications :: Email :: Mail Transport Agents",
]
dynamic = [
  "description",
  "version",
]
dependencies = [
  "inotify",
]
[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "flake8-annotations",
  "flake8-bugbear",
  "flake8-comprehensions",
  "flake8-pep3101",
  "flake8-print",
  "flit",
  "isort",
  "mypy",
  "pip-tools",
  "pre-commit",
  "requirements-parser",
  "termcolor",
]
[project.urls]
"Bug Tracker" = "https://github.com/sumnerevans/offlinemsmtp/issues"
Homepage = "https://github.com/sumnerevans/offlinemsmtp"
[project.scripts]
offlinemsmtp = "offlinemsmtp.__main__:main"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = "offlinemsmtp"
line_length = 99
